# Gmail-Scraper

./: .gitignore  QUICKSTART.md  README.md  app.py  config.py  example_usage.py  gmail_scraper.py  presentation.py  pyproject.toml  requirements.txt
static/: script.js  styles.css
templates/: index.html
