[project]
name = "gmail-scraper"
version = "2.0.0"
description = "Professional Gmail Scraper Web Application with keyword search and filtering"
requires-python = ">=3.9"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "google-auth-oauthlib==1.2.0",
    "google-auth-httplib2==0.2.0",
    "google-api-python-client==2.100.0",
    "google-auth==2.28.0",
    "python-dotenv==1.0.0",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "typing-extensions==4.15.0",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
]